--- a/mobile/package.json
+++ b/mobile/package.json
@@ -5,28 +5,33 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "web": "react-scripts start",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-vector-icons": "^10.0.0",
-    "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "^3.5.4",
-    "react-native-gesture-handler": "^2.12.1",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.25.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.5.0",
-    "react-native-sound": "^0.11.2"
+    "react": "18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.25.0",
+    "react-native-sound": "^0.11.2",
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-web": "^0.19.0",
+    "react-refresh": "^0.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli": "latest",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
@@ -37,10 +42,11 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
+    "react-scripts": "5.0.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
   "engines": {
     "node": ">=16"
   }
-} 
+}
